--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <properties>
         <asm.version>9.6</asm.version>
         <assertj.version>3.25.2</assertj.version>
-        <cloudhopper-smpp.version>8.0.0</cloudhopper-smpp.version>
+        <cloudhopper-smpp.version>8.0.1</cloudhopper-smpp.version>
         <jackson-bom.version>2.16.1</jackson-bom.version>
         <mockito.version>5.10.0</mockito.version>
         <netty.version>4.1.106.Final</netty.version>
@@ -39,7 +39,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.github.aspan</groupId>
+            <groupId>biz.asplund</groupId>
             <artifactId>cloudhopper-smpp</artifactId>
             <version>${cloudhopper-smpp.version}</version>
         </dependency>
